# mcp-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
src/ceveto_mcp/: __main__.py  client.py  config.py  openapi_tools.py  permissions.py  server.py  session.py
