[project]
name = "ceveto-mcp"
version = "0.1.0"
description = "Ceveto MCP server — AI agent access to the Ceveto business management API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=44.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
ceveto-mcp = "ceveto_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ceveto_mcp"]
